--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ TELEGRAM_CHAT_ID=
 WECOM_BOT_KEY=
 WECOM_BOT_TELPHONE=
 #WxPusher
-WX_PUSHER_APP_TOKEN=
-WX_PUSHER_UID=
+WX_PUSHER_APP_TOKEN=AT_amsxhtPmHb6NDoybOatZaVp5nQyadKnl
+WX_PUSHER_UID=UID_RHZRcHrKDyI67gUKiofN32JyB7pO
